--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "version": 2,
   "name": "noahs-ielts-timer",
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": ".",
   "routes": [
     {
       "src": "/(.*)",
