Fix Node.js version specification in package.json - Use specific version 18.x instead of range to avoid auto-upgrade warnings

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://noahs-ielts-timer.vercel.app/",
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
   "browserslist": [
     "> 1%",
