--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
   "version": 2,
   "name": "noahs-ielts-timer",
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": ".",
+  "builds": [
+    {
+      "src": "**/*",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
