Restructure for Vercel deployment - Create public directory with deployment files and update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,7 @@ Thumbs.db
 # Backup files
 *.bak
 *.backup
-*.old 
+*.old
+
+# Root index.html (use public/index.html for deployment)
+/index.html 
